apps/nextcloud/collabora/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`collabora.${DOMAIN}`)"
      priority: 10
      services:
        - name: collabora-collabora-online
          port: 9980
